fix code that generates CSS for components from component menu position window. Use text-align:center instead of margin:0px auto so centered components can align center & side-by-side instead of each component taking up a whole row because of margin:0px auto.

--- a/wwwroot/css/rennder.css
+++ b/wwwroot/css/rennder.css
@@ -25,9 +25,10 @@ select, input, textarea{margin:0px;}
 /* webpage specific */
 .body{position:relative; width:100%;}
 .webpage{position:relative; margin:0px auto;}
-.webpage .component{position:relative;}
+.webpage .component{position:relative; width:100%; vertical-align:top;}
 .webpage .ispanel {position:relative; width:100%; height:100%;}
-.webpage .inner-panel{position:relative; width:100%; height:100%;}
+.webpage .inner-panel{position:relative; width:100%; height:100%; text-align:center;}
+.webpage .inner-panel:after{content:""; display:table; clear:both;}
 .webpage input[type='text']{padding:3px 7px; width:calc(100% - 14px); font-size:14px;}input{outline:none;}
 
 /* theme elements (textbox.html) */
